task3/mysql-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: web
  clusterIP: None
  selector:
    app: mysql
    tier: backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-sts
spec:
  selector:
    matchLabels:
      app: mysql
      tier: backend # has to match .spec.template.metadata.labels
  serviceName: "mysql-svc"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: mysql
        tier: backend # has to match .spec.selector.matchLabels
    spec:
      securityContext:
        runAsUser: 65534
        fsGroup: 65534
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql-pod
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
