task3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - secretName: mine-tls-secret
  backend:
    serviceName: wordpress
    servicePort: 80
